# axle

./: +  .clang-format  .gitignore  .gitmodules  Axle.sln  CMakeLists.txt  Cargo.toml  GenerateProjects.bat  LICENSE  README.md  foo.txt  imgui.ini  premake5.lua
AAP/: CMakeLists.txt
AAP/src/: Setups.hpp  Shaders.cpp  Types.hpp  Utils.cpp  Utils.hpp  main.cpp
AAP/src/Renderer/: Shaders.cpp
Axle/: Axle.vcxproj  Axle.vcxproj.filters  CMakeLists.txt
Axle/src/: Axle.h  Axle.hpp  AxleApp.hpp  Test.cpp  Test.h  axpch.cpp  axpch.hpp
Axle/src/Axle/: Application.cpp  Application.h  Application.hpp  Core.h  EntryPoint.h  EntryPoint.hpp  Log.cpp  Log.h  Log.hpp
Axle/src/Core/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Systems.cpp  Systems.hpp  Types.hpp
Axle/src/Core/Config/: Config.cpp  Config.hpp
Axle/src/Core/Error/: Error.hpp  Panic.cpp  Panic.hpp  Result.hpp
Axle/src/Core/Events/: Event.cpp  Event.hpp  EventHandler.cpp  EventHandler.hpp
Axle/src/Core/Input/: Input.cpp  Input.hpp  InputCallbacks.cpp  InputCallbacks.hpp  InputManager.cpp  InputManager.hpp  InputState.cpp  InputState.hpp
Axle/src/Core/Job/: JobBuffer.cpp  JobBuffer.hpp  JobSystem.cpp  JobSystem.hpp  JobSystemOLD.cpp  RingBuffer.hpp
Axle/src/Core/Layer/: Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
Axle/src/Core/Logger/: Log.cpp  Log.hpp
Axle/src/Core/Resource/: ResourceManager.cpp  ResourceManager.hpp
Axle/src/Core/Window/: Window.cpp  Window.hpp
Axle/src/Core/Window/Callbacks/: InputCallbacks.cpp  InputCallbacks.hpp  WindowCallbacks.cpp  WindowCallbacks.hpp
Axle/src/Debug/: Console.cpp  Console.hpp  ECSEditor.hpp  FPS.hpp  Inspector.cpp  Inspector.hpp  Overlay.cpp  Overlay.hpp
Axle/src/ECS/: ComponentArray.hpp  ECS.cpp  ECS.hpp  Entities.cpp  Entities.hpp  Resources.cpp  Resources.hpp  Systems.cpp  Systems.hpp
Axle/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
Axle/src/Math/: Math_Types.hpp  Mathf.cpp  Mathf.hpp
Axle/src/Other/: Observer.hpp
Axle/src/Other/CustomTypes/: Expected.hpp  RingBuffer.hpp  SparseSet.hpp  TripleBuffer.hpp
Axle/src/Other/Helpers/: Observer.hpp  SparseSet.hpp
Axle/src/Other/ObserverPattern/: Observer.cpp  Observer.hpp
Axle/src/Renderer/: GLDebug.cpp  GLDebug.hpp
Axle/src/Renderer/Camera/: Camera.cpp  Camera.hpp
Axle/src/Renderer/Meshes/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp
Axle/src/Renderer/Primitives/: Buffer.cpp  Buffer.hpp
Axle/src/Renderer/Shaders/: Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp
Axle/src/Renderer/Skybox/: Skybox.cpp  Skybox.hpp
Axle/src/Renderer/Textures/: Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
Axle/tests/: CMakeLists.txt  ConfigTest.cpp  EventTest.cpp  ExpectedTest.cpp  InputTest.cpp  JobSystemTest.cpp  LoggerTest.cpp  MathTest.cpp  Math_test.cpp  ResourceManagerTest.cpp  event_test.cpp  logger_test.cpp  main.cpp
Axle/tests/ECS/: EntitiesTest.cpp  ResourcesTest.cpp  SparseVSMap.cpp  SystemsTest.cpp  ViewTest.cpp  ViewTestTest.cpp
Indications/: ErrorHandling.md  Subsystem_start_and_shutdown.md
LICENSES/: CoroWeaver.txt  easy_profiler.txt  glm.txt  premake-ecc.txt
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: Application.cpp  SandboxApp.cpp
Sandbox/src/Helpers/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  ShaderHelper.cpp  ShaderHelper.hpp
Sandbox/src/Shaders/: default.frag  default.vert  skybox.frag  skybox.vert
assets/schemas/: ShaderCollection.fbs  test.fbs
assets/schemas/Renderer/: ShadeSource.fbs  ShaderCache.fbs  ShaderSource.fbs
assets/tests/: config.ini  profile_dump.prof
bin-int/Debug-x64/Axle/: Axle.dll.recipe  vc143.idb
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  vc143.idb
crates/axle_ecs/: Cargo.toml
crates/axle_ecs/src/: custom_errors.rs  entities.rs  lib.rs  resource.rs  resources.rs  systems.rs  world.rs
crates/axle_ecs/src/entities/: query.rs  query_entity.rs
crates/axle_math/: Cargo.toml
crates/axle_math/src/: coordinate_system.rs  custom_errors.rs  lib.rs  math.rs  rotation.rs  transform.rs  vector.rs
crates/axle_render/: Cargo.toml
crates/axle_render/src/: config.rs  custom_errors.rs  lib.rs  renderer.rs
crates/axle_render/src/primitives/: ellipse.rs  mod.rs  renderable.rs  triangle.rs
example/: Cargo.toml
example/src/: main.rs  object_example.rs
old_code/: .gitignore
old_code/crates/axle_ecs/src/: entities.rs  lib.rs  resources.rs  systems.rs  world.rs
old_code/crates/axle_ecs/src/entities/: query.rs
old_code/crates/axle_math/src/: coordinate_system.rs
old_code/crates/axle_render/src/: lib.rs  renderer.rs
old_code/crates/axle_render/src/primitives/: mod.rs  triangle.rs
old_code/src/: config.rs
old_code/src/physics/: shape.rs
old_code/src/view/: renderer.rs
old_code/tests/ecs/: systems.rs
src/: app.rs  application.rs  config.rs  lib.rs
src/ecs/: game_object.rs
src/engine/: input.rs  mod.rs  transform.rs  vector.rs  vector2.rs
src/physics/: collisions.rs  mod.rs  rigid_body.rs  shape.rs
src/utils/: coordinate.rs
src/view/: renderer.rs
tests/ecs/: entities.rs  resources.rs  systems.rs
