[package]
name = "axle"
version = "0.0.1"
edition = "2021"
categories = ["game-engines", "graphics", "gui", "rendering"]
description = "A simple lightweight 2D game engine written in Rust"
repository = "https://github.com/Estikno/axle2D"
license = "Apache-2.0"
rust-version = "1.79.0"

[workspace]
members = [
    "crates/*"
]
exclude = [
    "example"
]

[dependencies]
anyhow = "1.0.86"

[dependencies.sdl2]
features = ["image", "gfx"]
version = "0.37.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
