[package]
name = "axle_engine"
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "graphics", "gui", "rendering"]
keywords = ["game", "engine", "gamedev", "graphics", "axle_engine"]
description = "A simple lightweight 2D game engine written in Rust"
repository = "https://github.com/Estikno/axle"
license = "Apache-2.0"
rust-version = "1.80.1"

[workspace]
members = [
    "crates/*"
]
exclude = [
    "example"
]

[dependencies]
anyhow = "1.0.86"
eyre = "0.6.12"
axle_ecs = { path = "crates/axle_ecs" }

[dependencies.sdl2]
features = ["image", "gfx"]
version = "0.37.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[[test]]
name = "resources"
path = "tests/ecs/resources.rs"

[[test]]
name = "entities"
path = "tests/ecs/entities.rs"