[package]
name = "axle_ecs"
version = "0.2.2"
edition = "2021"
categories = ["game-engines", "data-structures"]
keywords = ["ecs", "game", "axle_engine"]
description = "Axle's entity component system"
repository = "https://github.com/Estikno/axle"
license = "Apache-2.0"
rust-version = "1.80.1"

[dependencies]
eyre = "0.6.12"
thiserror = "1.0.63"
