[package]
name = "axle_render"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
thiserror = "1.0.63"
axle_ecs = { path = "../axle_ecs" }
axle_math = { path = "../axle_math" }

[dev-dependencies]
assert_approx_eq = "1.1.0"

[dependencies.sdl2]
features = ["image", "gfx"]
version = "0.37.0"
